--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -177,6 +177,15 @@ input, select {
   left: 0;
   right: 0;
 }
+.playlist-details .playlist-header .playlist-length {
+  font-weight: 200;
+  color: #b3b3b3;
+}
+.playlist-details .playlist-header .playlist-length::before {
+  content: ", ";
+  font-weight: bold;
+  color: #ffffff;
+}
 .playlist-details .play-all-btn {
   position: relative;
   bottom: 40px;
@@ -256,6 +265,8 @@ input, select {
 }
 .playlist-details .search-container {
   margin-top: 40px;
+  position: relative;
+  z-index: 2;
 }
 .playlist-details .search-container h3 {
   margin-bottom: 20px;
